<resources>
    <string name="app_name">인천e씀</string>
    <string name="title_home">가격비교</string>
    <string name="title_dashboard">착한가게</string>
    <string name="title_menu">메뉴</string>
    <string name="title_favorite">내가찜한가게</string>
    <string name="title_calc">계산기</string>

    <string name="dbgubun_nature">농축수산물</string>
    <string name="dbgubun_process">가공식품</string>
    <string name="dbgubun_industrial">공산품</string>
    <string name="dbgubun_dining">외식비</string>

    <string name="sale_incheon">3%</string>
    <string name="sale_west">7%</string>
    <string name="sale_yeonsu">10%</string>

    <string name="menu_location">내 지역 재설정</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_qna">QnA</string>
    <string name="menu_help">고객센터/도움말</string>
    <string name="menu_setting">설정</string>
    <string name="menu_prepare">준비중입니다</string>

    <string name="guplace_middle">중구</string>
    <string name="guplace_west">서구</string>
    <string name="guplace_east">동구</string>
    <string name="guplace_southeast">남동구</string>
    <string name="guplace_michuhol">미추홀구</string>
    <string name="guplace_yeonsu">연수구</string>
    <string name="guplace_bupyeong">부평구</string>
    <string name="guplace_geyang">계양구</string>
    <string name="guplace_incheon">인천전체</string>

    <string name="market_bigname_middle">이마트동인천</string>
    <string name="market_bigname_west">홈플러스가좌점</string>
    <string name="market_bigname_east">송림트레이더스</string>
    <string name="market_bigname_southeast">홈플러스구월점</string>
    <string name="market_bigname_michuhol">롯데인천터미널</string>
    <string name="market_bigname_yeonsu">롯데마트연수점</string>
    <string name="market_bigname_bupyeong">롯데마트부평점</string>
    <string name="market_bigname_geyang">홈플러스작전점</string>

    <string name="market_oldname_middle">중구 평균</string>
    <string name="market_oldname_west">서구 평균</string>
    <string name="market_oldname_east">동구 평균</string>
    <string name="market_oldname_southeast">남동구 평균</string>
    <string name="market_oldname_michuhol">미추홀구 평균</string>
    <string name="market_oldname_yeonsu">연수구 평균</string>
    <string name="market_oldname_bupyeong">부평구 평균</string>
    <string name="market_oldname_geyang">계양구 평균</string>

    <string name="market_sale_name">상품명</string>
    <string name="market_sale_yes">적립 O</string>
    <string name="market_sale_no">적립 X</string>
    <string name="market_category_name">카테고리</string>

    <string name="sale_per_yeonsu">10%</string>
    <string name="sale_per_west">7%</string>
    <string name="sale_per_incheon">3%</string>
    <string name="sale_per_desc">적립 가능</string>

    <string name="market_gubun1">농수축산물</string>
    <string name="market_gubun2">가공식품</string>
    <string name="market_gubun3">공산품</string>
    <string name="market_gubun4">외식</string>

    <string name="good_gubun_1">전체</string>
    <string name="good_gubun_2">식사</string>
    <string name="good_gubun_3">제과.카페</string>
    <string name="good_gubun_4">편의시설</string>

    <string name="home_desc_market">주민분들을 위한\n오늘의 착한가게!</string>
    <string name="home_desc_noon"># 매일 낮 12시, 오늘의 착한 가게를 추천받아보세요.</string>
    <string name="home_desc_good">착한 가게 바로 가기 &#62; </string>

    <string name="good_desc_favorite">나의 찜한 가게</string>
    <string name="good_desc_goodcheck">착한 가게만</string>
    <string name="good_detail_park_y">주차가능</string>
    <string name="good_detail_park_n">주차불가</string>
    <string name="good_detail_delivery_y">배달가능</string>
    <string name="good_detail_delivery_n">배달불가</string>

    <string name="search_none">검색 결과가 없습니다</string>
    <string name="calc_plus_error">연산자를 연속 입력하면 안됩니다</string>

    <string name="local_title">내 지역 설정하고 시작하기</string>
    <string name="local_text">내 지역을 설정하면 더욱 간편하게 가격을 비교할\n수 있습니다. 나의 지역을 설정하고 시작해보세요!</string>
    <string name="local_saleintro">할인되는 지역입니다.</string>
</resources>
