<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="con.jwlee.itssum.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_to_navigation_marketlist"
            app:destination="@id/navigation_marketlist" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="con.jwlee.itssum.ui.community.CommunityFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="con.jwlee.itssum.ui.menu.MenuFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_marketlist"
        android:name="con.jwlee.itssum.ui.home.MarketListFragment"
        android:label="@string/guplace_yeonsu"
        tools:layout="@layout/market_list_ac" />

</navigation>