<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/nature_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbgubun_nature"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/process_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbgubun_process"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nature_button"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/indust_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbgubun_industrial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/process_button"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/dining_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbgubun_dining"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indust_button"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginTop="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>